// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-textarea"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The textarea
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative preventWidthResizing"
  >
    <textarea
      aria-invalid="false"
      class="default preventWidthResizing"
      id="the-textarea"
    />
    <div
      class="feedbackIconPosition"
    />
  </div>
</div>
`;

exports[`TextArea renders with a feedback state and icon 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-textarea"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The textarea
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative preventWidthResizing"
  >
    <textarea
      aria-invalid="true"
      class="error preventWidthResizing"
      id="the-textarea"
      style="padding-right:calc(16px + 2rem)"
    />
    <div
      class="feedbackIconPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
